<resources>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="app_name">BlockLauncher</string>
    <string name="select_file">Choose file from SD</string>
    <string name="texture_browse_path">res/ult</string>
    <string name="languages_supported">,de,en,es,fi,fr,hr,in,it,ko,pl,pt,ru,zh_CN,zh_TW</string>
    <string name="textOn">ON</string>
    <string name="textOff">OFF</string>
    <string name="pref_ctrl_touchscreen">Use Touchscreen</string>
    <string name="pref_ctrl_touchscreen_summary">If you are not using an Xperia Play, check this</string>
    <string name="pref_mp_username">Multiplayer Username</string>
    <string name="pref_mp_username_summary">Your name, duh</string>
    <string name="pref_texture_pack">Texture Pack</string>
    <string name="pref_texture_pack_summary">Change your texture pack</string>
    <string name="pref_zz_longvibration">Extra-long vibration</string>
    <string name="pref_zz_longvibration_summary">Increase the vibration length by 5x</string>
    <string name="pref_zz_safe_mode">Safe mode</string>
    <string name="pref_zz_safe_mode_summary">Disables all modifications</string>
    <string name="pref_zz_texture_pack_enable">Use texture pack</string>
    <string name="pref_zz_custom_dpi">Custom DPI</string>
    <string name="pref_zz_custom_dpi_summary">Change the reported screen density to change size of controls - leave blank to disable</string>
    <string name="pref_zz_texture_pack_demo">Demonstrate texture pack support</string>
    <string name="pref_zz_texture_pack_demo_summary">Use the built-in version of the Slickcraft texture pack by NathanX</string>
    <string name="pref_mp_server_visible_default">Server visible by default</string>
    <string name="pref_mp_title">Multiplayer</string>
    <string name="pref_ctrl_title">Controls</string>
    <string name="pref_gfx_title">Graphics</string>
    <string name="pref_addons_title">Addons and patches</string>
    <string name="pref_textures_title">Textures</string>
    <string name="pref_support_title">Support</string>
    <string name="pref_zz_load_native_addons">Enable experimental addon support</string>
    <string name="pref_zz_enable_hovercar">Enable in-game patch manager</string>
    <string name="texture_pack_unable_to_load">Unable to load texture pack.</string>
    <string name="pref_zz_extract_original_textures">Extract original textures with root access</string>
    <string name="pref_zz_extract_original_textures_summary">Backup original APK with root access and set it as the texture pack</string>
    <string name="extracting_textures">Backing up original APK</string>
    <string name="extract_textures_success">Successfully set original APK as texture pack.</string>
    <string name="extract_textures_error">Unable to access original APK.</string>
    <string name="extract_textures_no_root">Unable to gain superuser access - are you rooted?</string>
    <string name="extract_textures_need_update">It seems you are using textures from an older version of Minecraft PE. Please run \"Extract original textures with root access\" in the options screen again to update textures.</string>
    <string name="pref_zz_skin_enable">Enable skin override</string>
    <string name="pref_zz_skin">Change skin</string>
    <string name="pref_zz_skin_summary">Select .png file to change skin to (will only be visible to you)</string>
    <string name="pref_zz_hovercar_hide">Hide patch manager button</string>
    <string name="pref_zz_script_enable">Enable ModPE Scripts support</string>
    <string name="pref_zz_show_insert_text">Show \"Insert text\" option in in-game patch manager</string>
    <string name="pref_zz_language_override">Language</string>
    <string name="pref_zz_legacy_keyboard_input">Use old keyboard input code</string>
    <string name="pref_zz_legacy_keyboard_input_summary">A fix to keyboard bugs in the new 0.8.x update</string>
    <string name="nerdy_stuff_page">Nerdy stuff</string>
    <string name="dump_libminecraftpe">Dump libminecraftpe.so from memory</string>
    <string name="nerdy_stuff_are_useless">Pretty much everything on this page is useless. They are here for troubleshooting bugs.</string>
    <string name="restart_app">Restart app</string>
    <string name="manage_patches">Manage patches</string>
    <string name="world_name_prompt">Name:</string>
    <string name="world_seed_prompt">Seed:</string>
    <string name="world_gamemode_prompt">Game Mode:</string>
    <string name="manage_addons">Manage addons</string>
    <string name="about_about">About BlockLauncher</string>
    <string name="about_copyright">Copyright © 2013–2014 Zhuowei Zhang</string>
    <string name="about_librarycredits">"This program uses the aFileChooser library by Paul Burke. 
 This program contains code from Snowbound's PTPatchTool, licensed under the Eclipse Public License. 
 This program contains a modified version of NathanX's Slickcraft texture pack: used with permission.
 Parts of the built-in texture pack is based on RepetiCraft by Theevilpplz and used with permission.
 This program contains a version of the Cydia Substrate framework by Saurik, licensed under the GNU Lesser General Public License.
 This program uses the libsuperuser library by Chainfire.
 This program contains a copy of the Rhino JavaScript engine from the Mozilla project.
 For full licensing information, check the Minecraft Forums thread.
"</string>
    <string name="about_thankscommunity">"This application was made possible by the work of many talented translators, testers, and programmers. Thank you.
View the Minecraft Forums thread for a list of contributors."</string>
    <string name="about_go_to_forums">Open Minecraft Forums thread for BlockLauncher</string>
    <string name="nerdy_stuff_dump_modpe">Dump ModPE Script methods</string>
    <string name="nerdy_stuff_set_skin">Set skin to /sdcard/skin.png</string>
    <string name="nerdy_stuff_secret">Authorized personnel only</string>
    <string name="pref_other_title">Other</string>
    <string name="pref_zz_legacy_live_patch">Use old live patching code from BlockLauncher 1.6.8</string>
    <string name="pref_zz_legacy_live_patch_summary">Turn this on if BlockLauncher stopped working after the 1.6.9 update.</string>
    <string name="pref_zz_command_history">Enable command history on chat screen</string>
    <string name="pref_zz_immersive_mode">Fullscreen mode</string>
    <string name="pref_zz_immersive_mode_summary">Hide the navigation buttons during gameplay</string>
    <string name="advertising_privacy_policy">Advertising privacy policy</string>
    <string name="about_kamcord_credits">Certain video and audio capture functionality is Powered by Kamcord™ (kamcord.com), and your use of such functionality is subject to the Kamcord Terms of Use (kamcord.com/tos) and Privacy Policy (kamcord.com/privacy)</string>
    <string name="about_fmod_credits">Audio engine : FMOD Studio by Firelight Technologies</string>
    <string name="texture_entry_up">Up</string>
    <string name="texture_entry_down">Down</string>
    <string name="texture_entry_remove">Remove</string>
    <string name="about_oss_license_info">View library licenses</string>
    <string name="pref_zz_signal_handler">Write crash logs to shared storage</string>
    <string name="pref_zz_theme_dark">Use dark theme</string>
    <string name="pref_zz_desktop_gui">Use Desktop GUI</string>
    <string name="pref_zz_desktop_gui_summary">Change inventory and crafting windows to Desktop mode</string>
</resources>