<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingLeft="16.0dip" android:paddingTop="16.0dip" android:paddingRight="16.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="15.0pt" android:id="@id/about_appnametext" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" />
        <TextView android:textSize="15.0pt" android:typeface="monospace" android:id="@id/rofl_text" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:textSize="11.0pt" android:id="@id/about_appversiontext" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_thankscommunity" />
        <Button android:id="@id/about_go_to_forums_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_go_to_forums" />
        <TextView android:id="@id/about_librarycreditstext" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_librarycredits" />
        <Button android:id="@id/about_oss_license_info_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_oss_license_info" />
        <TextView android:id="@id/about_kamcordcreditstext" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_kamcord_credits" />
        <TextView android:id="@id/about_fmodcreditstext" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_fmod_credits" />
        <TextView android:id="@id/about_copyrighttext" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_copyright" />
    </LinearLayout>
</ScrollView>
