<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/world_name_prompt" android:layout_weight="0.0" />
            <EditText android:id="@id/world_name_entry" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/world_gamemode_prompt" android:layout_weight="0.0" />
            <Spinner android:gravity="fill_horizontal" android:entries="@array/world_gamemodes" android:id="@id/world_gamemode_spinner" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/world_seed_prompt" android:layout_weight="0.0" />
            <EditText android:id="@id/world_seed_entry" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
