<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingLeft="16.0dip" android:paddingTop="8.0dip" android:paddingRight="16.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/texture_entry_img" android:paddingRight="8.0dip" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
    <TextView android:textSize="18.0sp" android:id="@id/texture_entry_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toRightOf="@id/texture_entry_img" android:layout_alignParentTop="true" />
    <TextView android:textSize="14.0sp" android:id="@id/texture_entry_desc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toRightOf="@id/texture_entry_img" android:layout_below="@id/texture_entry_name" />
    <Button android:id="@id/texture_entry_up" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/texture_entry_up" android:drawableLeft="@drawable/ic_keyboard_arrow_up_white_18dp" android:layout_toRightOf="@id/texture_entry_img" android:layout_below="@id/texture_entry_desc" android:onClick="onTextureUpClick" />
    <Button android:id="@id/texture_entry_down" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/texture_entry_down" android:drawableLeft="@drawable/ic_keyboard_arrow_down_white_18dp" android:layout_toRightOf="@id/texture_entry_up" android:layout_below="@id/texture_entry_desc" android:onClick="onTextureDownClick" />
    <Button android:id="@id/texture_entry_remove" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/texture_entry_remove" android:drawableLeft="@drawable/ic_delete_white_18dp" android:layout_toRightOf="@id/texture_entry_down" android:layout_below="@id/texture_entry_desc" android:onClick="onTextureRemoveClick" />
</RelativeLayout>
